fix z-index

--- a/styles/Wrapper.module.scss
+++ b/styles/Wrapper.module.scss
@@ -5,6 +5,7 @@
 	padding: 20px 1.5rem;
 	align-items: center;
 	min-width: 100%;
+	z-index: 1;
 }
 
 .navWrapper {
